fix: prevent URL fields from being wiped on lesson update + deduplicate sections in getCourseWithSections
Root causes:
1. Lesson URL fields (videoUrl, sourceCodeUrl, thumbnailUrl) were being
   overwritten with empty string on every admin save. Fix: use isBlank()
   check so only non-blank values update the field.
2. EntityGraph with N+1/lazy loading can return duplicate section rows
   (same id appearing multiple times). Fix: deduplicate by section.id
   using a HashSet filter in both getCourseWithSections and
   getCoursesBySemester.

Co-authored-by: Cursor <cursoragent@cursor.com>